Fixed getVisibility() bg in ka.parse class. Started with ka.field type 'objectCondition'

--- a/media/admin/css/ka.field.css
+++ b/media/admin/css/ka.field.css
@@ -58,6 +58,7 @@ div.ka-field-main div.desc {
     padding: 3px 0px 0px 20px;
     max-width: 325px;
     color: #999;
+    line-height: 14px;
 }
 
 tr.ka-field-main td div.desc {
